saves/test/demo_full_20240802_193545/review2015_count1k/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp review2015_count1k_tb.v review2015_count1k.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
review2015_count1k_tb.v:114: $finish called at 120130000 (1ps)

iverilog cmd 2 error:

